--- a/Gpx2Pic/App.config
+++ b/Gpx2Pic/App.config
@@ -16,6 +16,12 @@
             <setting name="PicturesFolder" serializeAs="String">
                 <value />
             </setting>
+            <setting name="TimeOffset" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="ErrorMargin" serializeAs="String">
+                <value>300</value>
+            </setting>
         </Gpx2Pic.Properties.Settings>
     </userSettings>
 </configuration>
