--- a/Gpx2Pic/Properties/Settings.settings
+++ b/Gpx2Pic/Properties/Settings.settings
@@ -8,5 +8,11 @@
     <Setting Name="PicturesFolder" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="TimeOffset" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="ErrorMargin" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">300</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
