Squashed commit of the following:
commit 9759ec5dbe8fba23433e30dd42c75a5cd0dbaa25
Author: fu-hsi <mariusz@kacki.pl>
Date:   Wed Nov 23 10:08:13 2022 +0100

    Commit

commit 3f6eb8c1503d008b9aa69b2b76fd7a34d11926b5
Author: fu-hsi <mariusz@kacki.pl>
Date:   Wed Nov 23 09:55:42 2022 +0100

    Commit

commit 1e1368c5c1e6cf52633970f2dff877fa3d950dfb
Author: fu-hsi <mariusz@kacki.pl>
Date:   Tue Oct 26 11:57:25 2021 +0200

    Commit

commit f74c7be42468e7b0440da8b93fbdf45ace88ce09
Author: fu-hsi <mariusz@kacki.pl>
Date:   Tue Sep 21 11:38:33 2021 +0200

    Optimizations

--- a/Gpx2Pic/App.config
+++ b/Gpx2Pic/App.config
@@ -22,6 +22,9 @@
             <setting name="ErrorMargin" serializeAs="String">
                 <value>300</value>
             </setting>
+            <setting name="BackupOriginal" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Gpx2Pic.Properties.Settings>
     </userSettings>
 </configuration>
