--- a/Gpx2Pic/packages.config
+++ b/Gpx2Pic/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ExifLib" version="1.7.0.0" targetFramework="net461" />
-  <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.3.3" targetFramework="net461" />
-  <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.3.3" targetFramework="net461" />
+  <package id="FastFitParser.Core" version="0.3.0.0" targetFramework="net461" />
+  <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.4" targetFramework="net461" />
+  <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.4" targetFramework="net461" />
 </packages>
